--- a/portfolio.html
+++ b/portfolio.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Il mio sito web">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://kateb-creator.github.io/il-mio-sito-web/">
-    <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/main/assets/img/anteprima_portfolio.png">
-    <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
-    <title>Il mio portfolio</title>
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/SCSS/portfolio.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Scopri i progetti di programmazione e design di Balia Katiuscia. Visualizza il portfolio dei suoi lavori innovativi e sostenibili.">
+        <meta name="keywords" content="portfolio, programmazione, design, progetti, sostenibilità, Balia Katiuscia">
+        <meta property="og:title" content="Il mio sito web">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://kateb-creator.github.io/il-mio-sito-web/">
+        <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/main/assets/img/anteprima_portfolio.png">
+        <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
+        <title>Portfolio di Balia Katiuscia - Progetti di Programmazione e Design</title>
+        <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+        <link rel="stylesheet" href="assets/SCSS/portfolio.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap">
+    </head>
 <body>
     <header>
         <nav>
@@ -45,7 +47,7 @@
                         Questi elementi visivi sono stati progettati per rappresentare fedelmente la missione e i valori dell'Hotel Pomelia.</p>
                 </div>
                 <div class="hotel-image">
-                    <img src="assets/img/hotelpomelia.jpg" alt="pagina sito web" loading="lazy">
+                    <img src="assets/img/hotelpomelia.jpg" alt="Pagina iniziale del sito web dell'Hotel Pomelia" loading="lazy">
                 </div>
             </div>
         </div>
