modifiche pagine principali

--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="it">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Scopri i progetti di programmazione e design di Balia Katiuscia. Visualizza il portfolio dei suoi lavori innovativi e sostenibili.">
-        <meta name="keywords" content="portfolio, programmazione, design, progetti, sostenibilità, Balia Katiuscia">
-        <meta property="og:title" content="Il mio sito web">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://kateb-creator.github.io/il-mio-sito-web/">
-        <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/main/assets/img/anteprima_portfolio.png">
-        <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
-        <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:wght@400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="assets/CSS/styles.css">
-        <title>Portfolio di Balia Katiuscia - Programmazione e Design</title>
-    </head>    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta property="og:title" content="Il mio sito web">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kateb-creator.github.io/il-mio-sito-web/">
+    <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/main/assets/img/anteprima_portfolio.png">
+    <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:wght@400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/CSS/styles.css">
+    <title>Balia Katiuscia</title>
+</head>
 <body>
     <header>
         <nav>
@@ -37,7 +35,7 @@
     <main>
         <div class="hero-container">
             <div class="hero-image">
-                <img src="assets/img/foto-profilo.png" alt="Foto di Katiuscia Balia" class="left-image" loading="lazy">
+                <img src="assets/img/foto-profilo.png" alt="La mia foto" class="left-image" loading="lazy">
             </div>
             <div class="hero-description">
                 <h1>Katiuscia Balia</h1>
