modifica descrittiva progetto hotem pomelia

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                         Questi elementi visivi sono stati progettati per rappresentare fedelmente la missione e i valori dell'Hotel Pomelia.</p>
                 </div>
                 <div class="hotel-image">
-                    <img src="assets/img/hotelpomelia.jpg" alt="Pagina iniziale del sito web dell'Hotel Pomelia" loading="lazy">
+                    <img src="assets/img/hotelpomelia.jpg" alt="progetto sito web dell'Hotel Pomelia" loading="lazy">
                 </div>
             </div>
         </div>
