--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/il-mio-sito-web/main/assets/img/anteprima_portfolio.png">
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/CSS/styles.css">
     <title>Balia Katiuscia</title>
@@ -33,7 +35,7 @@
     <main>
         <div class="hero-container">
             <div class="hero-image">
-                <img src="assets/img/foto-profilo.png" alt="La mia foto" class="left-image" loading="lazy">
+                <img src="assets/img/foto-profilo.png" alt="La mia foto" class="left-image" loading="lazy" width="300" height="300">
             </div>
             <div class="hero-description">
                 <h1>Katiuscia Balia</h1>
@@ -49,8 +51,8 @@
             <h2>Formazione e Competenze</h2>
             <img src="assets/img/education.png" alt="education" class="extra-image" loading="lazy" width="400" height="300">
             <img src="assets/img/abilità-personali.png" alt="abilita" class="extra-image" loading="lazy" width="400" height="300">
-         </div>
-         
+        </div>
+       
         <section class="SKILLS">
             <h2>Skills</h2>
             <div class="skills-container">
@@ -96,10 +98,10 @@
             <p>Non perdere neanche un contenuto esclusivo dei miei lavori handmade! Seguimi su TikTok e Instagram per aggiornamenti, tutorial, e dietro le quinte delle mie creazioni uniche.</p>
             <div class="social-links">
                 <a href="https://www.tiktok.com/@laguerradeibottonilab?_t=8fuYu39oum1&_r=1" target="_blank">
-                    <img src="assets/img/tiktok.png" alt="TikTok" class="social-icon" loading="lazy">
+                    <img src="assets/img/tiktok.png" alt="TikTok" class="social-icon" loading="lazy" width="40" height="40">
                 </a>
                 <a href="https://www.instagram.com/laguerradeibottonilab/" target="_blank">
-                    <img src="assets/img/instagramcreativo.png" alt="Instagram" class="social-icon" loading="lazy">
+                    <img src="assets/img/instagramcreativo.png" alt="Instagram" class="social-icon" loading="lazy" width="40" height="40">
                 </a>
             </div>
         </section>
@@ -113,7 +115,8 @@
         const navLinks = document.getElementById('nav-links');
 
         hamburger.addEventListener('click', () => {
-            navLinks.classList.toggle('show');
+            navLinks.classList.toggle('active');
+            hamburger.classList.toggle('active');
         });
     </script>
 </body>
