modifiche estetiche su tutte le pagine

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/CSS/contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Contatti-Balia Katiuscia</title>
 </head>
 <body>
@@ -44,13 +45,21 @@
         </section>
     </main>
 
-    <section class="social">
+    <section id="social">
         <h2>Connettiti con me e scopri il mio percorso lavorativo</h2>
-        <div class="social-container">
-            <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" class="social-icon" target="_blank"><img src="assets/img/start2impact.png" alt="start2impact" loading="lazy"></a>
-            <a href="https://github.com/KateB-creator/il-mio-sito-web" class="social-icon" target="_blank"><img src="assets/img/githubhomepage.png" alt="github" loading="lazy"></a>
-            <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" class="social-icon" target="_blank"><img src="assets/img/linkedin.png" alt="LinkedIn" loading="lazy"></a>
-            <a href="https://www.instagram.com/katiuscia_balia/" class="social-icon" target="_blank"><img src="assets/img/instagram.png" alt="Instagram" loading="lazy"></a>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/tuo_account" target="_blank" class="social-icon">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/tuo_profilo" target="_blank" class="social-icon">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://start2impact.com/tuo_profilo" target="_blank" class="social-icon">
+                <i class="fas fa-graduation-cap"></i> <!-- Font Awesome non ha un'icona specifica per Start2Impact, usa un'icona generica -->
+            </a>
+            <a href="https://github.com/tuo_profilo" target="_blank" class="social-icon">
+                <i class="fab fa-github"></i>
+            </a>
         </div>
     </section>
     
