--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         });
 
         // JavaScript per cambiare le parole
-        const words = ["a cad/cam designer", "a Graphic Designer", "a full stack developer student"];
+        const words = ["a CadCam designer", "a Graphic Designer", "a full stack developer student"];
         let index = 0;
 
         function changeWord() {
