--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="hero-container">
             <div class="hero-image">
-                <img src="assets/img/foto-profilo.png" alt="La mia foto" class="left-image" loading="lazy" width="300" height="300">
+                <img src="assets/img/foto-profilo.svg" alt="La mia foto" class="left-image" loading="lazy" width="300" height="300">
             </div>
             <div class="hero-description">
                 <h2>About me!</h2>
@@ -114,7 +114,7 @@
             <h2>Seguimi sui miei canali creativi!</h2>
             <p>Non perdere neanche un contenuto esclusivo dei miei lavori handmade! Seguimi su TikTok e Instagram per aggiornamenti, tutorial, e dietro le quinte delle mie creazioni uniche.</p>
             <div class="social-links">
-                <a href="https://www.tiktok.com/@laguerradeibottonilab?_t=8fuYu39oum1&_r=1" target="_blank">
+                <a href="https://www.tiktok.com/@laguerradeibottonilab" target="_blank">
                     <img src="assets/img/tiktok.png" alt="TikTok" class="social-icon" loading="lazy" width="40" height="40">
                 </a>
                 <a href="https://www.instagram.com/laguerradeibottonilab/" target="_blank">
