aggiunta fa-spin alle icone social in contact

--- a/contact.html
+++ b/contact.html
@@ -49,16 +49,16 @@
         <h2>Connettiti con me e scopri il mio percorso lavorativo</h2>
         <div class="social-icons">
             <a href="https://www.instagram.com/katiuscia_balia/" target="_blank" class="social-icon">
-                <i class="fab fa-instagram"></i>
+                <i class="fab fa-instagram fa-spin"></i>
             </a>
             <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" target="_blank" class="social-icon">
-                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-linkedin fa-spin"></i>
             </a>
             <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" target="_blank" class="social-icon">
-                <i class="fas fa-graduation-cap"></i>
+                <i class="fas fa-graduation-cap fa-spin"></i>
             </a>
             <a href="https://github.com/KateB-creator/il-mio-sito-web" target="_blank" class="social-icon">
-                <i class="fab fa-github"></i>
+                <i class="fab fa-github fa-spin"></i>
             </a>
         </div>
     </section>
