--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="hero-container">
             <div class="hero-image">
-                <img src="assets/img/foto-profilo.svg" alt="La mia foto" class="left-image" loading="lazy" width="300" height="300">
+                <img src="assets/img/foto-profilo.png" alt="La mia foto" class="left-image" loading="lazy" width="300" height="300">
             </div>
             <div class="hero-description">
                 <h2>About me!</h2>
