modifica css contact

--- a/contact.html
+++ b/contact.html
@@ -48,16 +48,16 @@
     <section id="social">
         <h2>Connettiti con me e scopri il mio percorso lavorativo</h2>
         <div class="social-icons">
-            <a href="https://www.instagram.com/katiuscia_balia/" target="_blank" class="social-icon">
+            <a href="https://www.instagram.com/katiuscia_balia/" target="_blank" class="social-icon" aria-label="Instagram">
                 <i class="fab fa-instagram fa-spin"></i>
             </a>
-            <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" target="_blank" class="social-icon">
+            <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" target="_blank" class="social-icon" aria-label="LinkedIn">
                 <i class="fab fa-linkedin fa-spin"></i>
             </a>
-            <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" target="_blank" class="social-icon">
+            <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" target="_blank" class="social-icon" aria-label="Talent">
                 <i class="fas fa-graduation-cap fa-spin"></i>
             </a>
-            <a href="https://github.com/KateB-creator/il-mio-sito-web" target="_blank" class="social-icon">
+            <a href="https://github.com/KateB-creator/il-mio-sito-web" target="_blank" class="social-icon" aria-label="GitHub">
                 <i class="fab fa-github fa-spin"></i>
             </a>
         </div>
