correzione errori css contact

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="main-content">
         <h1>Katiuscia Balia</h1>
-        <p id="changing-text">I'm <span class="changing-words">a full stack developer student</span></p>
+        <h1 id="changing-text">I'm <span class="changing-words">a full stack developer student</span></h1>
     </div>
 
     <main>
