--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/" target="_blank" class="social-icon" aria-label="LinkedIn">
                 <i class="fab fa-linkedin fa-spin"></i>
             </a>
-            <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" target="_blank" class="social-icon" aria-label="Talent">
+            <a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a" target="_blank" class="social-icon" aria-label="Star2Impact">
                 <i class="fas fa-graduation-cap fa-spin"></i>
             </a>
             <a href="https://github.com/KateB-creator/il-mio-sito-web" target="_blank" class="social-icon" aria-label="GitHub">
