--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,11 @@
             <h1>Inviami un messaggio</h1>
             <form id="contact-form">
                 <label for="name">Nome:</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name" name="name" required autocomplete="nome">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required autocomplete="email">
                 <label for="message">Messaggio:</label>
-                <textarea id="message" name="message" required></textarea>
+                <textarea id="message" name="message" required autocomplete="off"></textarea>
                 <button type="submit">Invia</button>
             </form>
         </section>
