--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <h1>Inviami un messaggio</h1>
             <form id="contact-form">
                 <label for="name">Nome:</label>
-                <input type="text" id="name" name="name" required autocomplete="nome">
+                <input type="text" id="name" name="name" required autocomplete="name">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required autocomplete="email">
                 <label for="message">Messaggio:</label>
