inserimento  meta name

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="description" content="Benvenuti nel sito web di Balia Katiuscia. Scopri i miei progetti di programmazione e design.">
     <meta property="og:title" content="Il mio sito web">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kateb-creator.github.io/il-mio-sito-web/">
