aggiornamento sito web

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             </div>
             <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">I miei progetti</a></li>
+                <li><a href="portfolio.html">Progetti di sviluppo</a></li>
                 <li><a href="contact.html">Contatti</a></li>
             </ul>
             <a href="assets/files/BaliaKatiuscia-juniorfullstackdeveloper.pdf" class="btn-download" download>Scarica CV</a>
