--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
         <meta property="og:description" content="Scopri i miei lavori di programmazione e design.">
         <title>Portfolio di Balia Katiuscia - Progetti di Programmazione e Design</title>
         <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-        <link rel="stylesheet" href="assets/SCSS/portfolio.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/SCSS/portfolio.css">   
     </head>
 <body>
     <header>
@@ -24,35 +24,49 @@
             </div>
             <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">I miei progetti</a></li>
+                <li><a href="portfolio.html">Progetti di sviluppo</a></li>
                 <li><a href="contact.html">Contatti</a></li>
             </ul>
             <a href="assets/files/BaliaKatiuscia-juniorfullstackdeveloper.pdf" class="btn-download" download>Scarica CV</a>
         </nav>
     </header>
-    <main>
-        <h1 class="special-font">I MIEI PROGETTI</h1>  
-        <div class="container">
-            <div class="item">
-                <div class="hotel-content">
-                    <h2>Progetto Start2impact - Travel</h2>
-                    <p>Mi sono occupata della progettazione e della stesura della pagina iniziale del sito web dell'Hotel Pomelia. 
-                        Il progetto ha incluso la definizione della vision e mission dell'hotel, la descrizione della sua storia e dei valori familiari, e la presentazione delle innovazioni ecologiche introdotte.
-                        Ho evidenziato l'uso di energia rinnovabile, l'arredamento sostenibile e i servizi offerti, tra cui la ristorazione a km 0 e le attività organizzate per gli ospiti. 
-                        Ho inoltre sottolineato l'impegno dell'hotel nel turismo sostenibile e il suo status di prima Società Benefit in Sicilia.</p>
-                       <p> Nel progetto per l'Hotel Pomelia, mi sono occupata della creazione del logo e dello sfondo del sito web, realizzati attraverso Canva con un design ideato personalmente. 
-                        Il logo riflette l'essenza dell'hotel come ecostruttura e punto di riferimento per il turismo sostenibile in Sicilia, mentre lo sfondo è stato pensato per armonizzarsi con l'atmosfera naturale e accogliente della struttura. 
-                        Questi elementi visivi sono stati progettati per rappresentare fedelmente la missione e i valori dell'Hotel Pomelia.</p>
+        <section class="progetto_uno">
+            <h2>Progetto: Travel - Hotel Pomelia</h2>
+            <div class="container text-center">
+                <div class="row align-items-start">
+                    <div class="col-12 col-md-6 ">
+                        <p>Mi sono occupata della progettazione e della stesura della pagina iniziale del sito web dell'Hotel Pomelia. 
+                            Il progetto ha incluso la definizione della vision e mission dell'hotel, la descrizione della sua storia e dei valori familiari
+                            Ho evidenziato l'uso di energia rinnovabile, l'arredamento sostenibile e i servizi offerti, tra cui la ristorazione a km 0
+                          inoltre ho sottolineato l'impegno dell'hotel nel turismo sostenibile e il suo status di prima Società Benefit in Sicilia.</p>
+                    </div>
+                    <div class="img-hotelPomelia col-12 col-md-6">
+                        <img src="assets/img/hotelpomelia.jpg" alt="progetto sito web dell'Hotel Pomelia" loading="lazy">
+                    </div>
                 </div>
-                <div class="hotel-image">
-                    <img src="assets/img/hotelpomelia.jpg" alt="progetto sito web dell'Hotel Pomelia" loading="lazy">
+          </div>
+        </section>
+
+        <section class="progetto_due">
+            <h2 class="text-center">Progetto: Mini Giochi a Tema Spaziale</h2>
+            <div class="container text-center">
+                <div class="row align-items-start">
+                    <div class="col-12 col-md-6 ">
+                        <p>Ho sviluppato tre mini giochi interattivi in JavaScript, tutti a tema spaziale. Ogni gioco sfida i giocatori a esplorare i personaggi dello spazio. 
+                            Ho utilizzato animazioni fluide e meccaniche di gioco che offrono un'esperienza avvincente. Perfetti per chi ama i giochi vintage!</p>
+                            <a href="https://battagliestellari.netlify.app/" target="_blank"><strong>Vai al progetto</strong></a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img src="assets/img/astrorex.png" alt="Anteprima Mini Giochi Spaziali" loading="lazy">
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </section>
+
     <footer>
         <p>&copy; 2024 Portfolio di Balia Katiuscia. Tutti i diritti riservati.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
         const hamburger = document.getElementById('hamburger');
         const navLinks = document.getElementById('nav-links');
