--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     <p><strong>Periodo:</strong> Giugno 2017 - Marzo 2024</p>
                 </div>
                 <div class="experience-item">
-                    <h3>Sviluppatrice Junior</h3>
-                    <p>Attualmente sto frequentando un master in full stack development presso la Start2Impact, dove sto acquisendo competenze in varie tecnologie per lo sviluppo web e mobile. </p>
+                    <h3>Sviluppatrice Junior FullStack</h3>
+                    <p>Attualmente sto frequentando un master in fullStack development presso la Start2Impact, dove sto acquisendo competenze in varie tecnologie per lo sviluppo web e mobile. </p>
                     <p><strong>Periodo:</strong> Giugno 2024 - Presente</p>
                 </div>
                 <div class="experience-item">
