--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,23 @@
                             <a href="https://battagliestellari.netlify.app/" target="_blank"><strong>Vai al progetto</strong></a>
                     </div>
                     <div class="col-12 col-md-6">
-                        <img src="assets/img/astrorex.png" alt="Anteprima Mini Giochi Spaziali" loading="lazy">
+                        <img src="assets/img/astrorex.png" class="astrorex" alt="Anteprima Mini Giochi Spaziali" loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="progetto_tre">
+            <h2 class="text-center">Progetto: BookFinder-trova i tuoi libri preferiti in un click</h2>
+            <div class="container text-center">
+                <div class="row align-items-start">
+                    <div class="col-12 col-md-6 ">
+                        <p>Ho sviluppato un'applicazione web chiamata BookFinder che semplifica la scoperta di nuovi libri. Utilizzando l'API di Open Library, BookFinder consente di cercare libri per categoria e visualizzare dettagli come titolo, autore e descrizione.
+                            Questo progetto mi ha permesso di approfondire le mie conoscenze in JavaScript e di mettere in pratica concetti come le API e le interfacce utente. Sono particolarmente soddisfatto dell'interfaccia intuitiva che ho creato per rendere l'esperienza di lettura ancora più piacevole.</p>
+                            <a href="https://bookfinder-ricercalibri.netlify.app/" target="_blank"><strong>Vai al progetto</strong></a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img src="assets/img/bookfinder_og_img.png" class="bookfinder" alt="Anteprima Bookfinder" loading="lazy">
                     </div>
                 </div>
             </div>
