--- a/index.html
+++ b/index.html
@@ -675,10 +675,9 @@
    		<div class="col-twelve">
 
    			<h5>Contact</h5>
-   			<h1>I'd Love To Hear From You.</h1>
+   			<h1>Scrivimi qui sotto!</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
-
+   			<p class="lead">Hai un progetto in mente? Vuoi saperne di più sulle mie competenze o sulla mia esperienza? Non esitare a contattarmi! Sono sempre alla ricerca di nuove sfide e opportunità per crescere professionalmente. Compila il form qui sotto, oppure scrivimi una email. Ti risponderò al più presto!</p>
    		</div> 
    	</div> <!-- /section-intro -->
 
