--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Start2impact</h4>
-	   					<p>Da sempre appassionata di tecnologia, ho deciso di trasformare questa passione in una carriera concreta. Attualmente, sono impegnata in un Master Full Stack presso Start2Impact, un percorso formativo che mi sta aprendo le porte del mondo dello sviluppo web e mobile. Studio con entusiasmo HTML, CSS, JavaScript (sia base che avanzato), TypeScript, React, PHP & MySQL, Node.js e WordPress. Ogni nuova tecnologia è una scoperta, un tassello in più verso il mio obiettivo: contribuire a cambiare il mondo attraverso progetti innovativi.</p>
+	   					<p>Da sempre appassionata di tecnologia, ho deciso di trasformare questa passione in una carriera concreta. Attualmente, sono impegnata in un Master Full Stack presso Start2Impact, un percorso formativo che mi sta aprendo le porte del mondo dello sviluppo web e mobile. Studio con entusiasmo HTML, CSS, JavaScript (sia base che avanzato), TypeScript, React, PHP & MySQL e WordPress. Ogni nuova tecnologia è una scoperta, un tassello in più verso il mio obiettivo: contribuire a cambiare il mondo attraverso progetti innovativi.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
