--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js" lang="en">
 <head>
 
-   <!--- basic page needs
-   ================================================== -->
    <meta charset="utf-8">
 	<title>Katiuscia Balia</title>
     <meta name="description" content="Benvenuti nel sito web di Balia Katiuscia. Scopri i miei progetti di programmazione.">
@@ -86,7 +82,7 @@
 
    	<ul class="intro-social">        
          <li><a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/"><i class="fa fa-linkedin"></i></a></li>
-		 <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>
+		 <li><a href="https://github.com/KateB-creator"><i class="fa fa-github"></i></a></li>
 		 <li><a href="https://codepen.io/Katiuscia-Balia"><i class="fa fa-codepen"></i></a></li>
          <li><a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a"><i class="fa fa-rocket"></i></a></li>
       </ul> <!-- /intro-social -->      	
@@ -408,6 +404,22 @@
 						</div>
 					</div> <!-- /folio-item -->
 
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/voci-desktop.webp" alt="Giornale">
+							<a href="#modal-04" class="overlay">              		                  
+							  <div class="folio-item-table">
+								<div class="folio-item-cell">
+									<h3 class="folio-title">New york Times</h3>	     					    
+											<span class="folio-types">
+												Progetto clone con React del New York Times
+										</span>		     		
+								</div> 	                      	
+							</div>                    
+						   </a>
+						</div>
+					</div> <!-- /folio-item -->
+
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
@@ -474,27 +486,28 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-03 -->
+				   </div> <!-- /modal-04 -->
 
 				   <div id="modal-04" class="popup-modal slider mfp-hide">	
 
-				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-beetle.jpg" alt="" />
-				     	</div>      	
+					<div class="media">
+						<img src="images/portfolio/modals/voci.webp" alt="" />
+					</div>      	
 
-					   <div class="description-box">
-					      <h4>Beetle</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+				  <div class="description-box">
+					 <h4>Progetto VOCI</h4>
+					 <a href="file/progetto-clone_NYT.pdf" download class="download-btn">Scarica il PDF</a>		      
+					 <p>Per questo progetto ho sviluppato Voci, una piattaforma che promuove la parità di genere nei media, con l’obiettivo di dare maggiore visibilità alle donne professioniste del settore. Ancora oggi, le donne nei media affrontano ostacoli significativi, dalla scarsa rappresentanza ai pregiudizi di genere. Voci nasce per creare una rete di supporto che connetta giornaliste, scrittrici e professioniste dell'informazione con opportunità di crescita, formazione e pubblicazione, contribuendo a un panorama mediatico più inclusivo ed equo.
+					   Credo fortemente che la parità di genere non sia solo un obiettivo, ma una necessità per costruire un futuro più giusto. Questo progetto è il mio piccolo contributo per dare voce a chi troppo spesso viene ignorato.</p>
+					 <div class="categories">Typescript</div>			               
+				  </div>
 
-					      <div class="categories">Branding</div>			               
-					   </div>
+				<div class="link-box">
+				   <a href="https://codepen.io/Katiuscia-Balia">Details</a>
+					 <a href="#" class="popup-modal-dismiss">Close</a>
+				</div>		      
 
-			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-				   </div> <!-- /modal-04 -->
+			  </div> <!-- /modal-04 -->
 
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
@@ -532,7 +545,8 @@
 			         <div class="link-box">
 			            <a href="http://www.behance.net">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+			         </div>		
+					       
 
 				   </div> <!-- /modal-06 -->
 
@@ -762,7 +776,7 @@
 
      			<ul class="footer-social">        
 					<li><a href="https://www.linkedin.com/in/katiuscia-balia-078b82244/"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://github.com/KateB-creator"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://codepen.io/Katiuscia-Balia"><i class="fa fa-codepen"></i></a></li>
 					<li><a href="https://talent.start2impact.it/profile/katiuscia-balia-71206396-6900-44db-82b9-f0e10f1a3e9a"><i class="fa fa-rocket"></i></a></li>
 			   </ul> 
