aggiornata sezione sito web

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
 				   	<strong>Javascript</strong>
 				   </li>
 				   <li>
-					<div class="progress percent65"><span>65%</span></div>
+					<div class="progress percent85"><span>85%</span></div>
 					<strong>React</strong>
 					</li>
 				   <li>
-				   	<div class="progress percent40"><span>40%</span></div>
+				   	<div class="progress percent75"><span>75%</span></div>
 				   	<strong>PHP&SQL</strong>
 				   </li>
 				   
@@ -230,7 +230,21 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Bizconsulting</h4>
-	   					<p>Attualmente sto svolgendo un tirocinio come sviluppatrice junior Full Stack con focus sul front-end presso Biz Consulting, un'azienda dinamica e all'avanguardia nel settore digitale. Questa esperienza mi sta permettendo di mettere in pratica le mie conoscenze e di acquisire nuove competenze in un ambiente stimolante e collaborativo. Sono entusiasta di poter contribuire a progetti concreti e di crescere professionalmente sotto la guida di esperti del settore.</p>
+	   					<p>Attualmente collaboro con Biz Consulting, un’agenzia digitale strutturata e dinamica, dove ricopro un ruolo attivo nello sviluppo front-end per clienti enterprise come Edison e Hera Comm, curando quotidianamente le rispettive landing page desktop e mobile.<br>
+
+							Principali attività e competenze acquisite:
+							<ul>
+								<li>Sviluppo di interfacce responsive a partire da template Figma, utilizzando HTML, CSS/SCSS e l’ultima versione di Bootstrap.</li>
+								<li>Gestione di ambienti di sviluppo in Linux e containerizzazione con Docker.</li>
+								<li>Collaborazione in team multidisciplinari, con adozione di metodologie agili e rispetto di flussi strutturati e scadenze.</li>
+								<li>Versionamento del codice con Git e utilizzo di GitLab per il controllo del ciclo di vita dei progetti.</li>
+								<li>Esperienza pratica con PHPStorm come IDE principale.</li>
+								<li>Partecipazione allo sviluppo di landing page reali per clienti come Segno Verde, oltre a Edison e Hera.</li>
+								<li>Inserimento e aggiornamento dei contenuti all’interno del CMS, con particolare attenzione alla gestione dei listini e prezzi.</li>
+								<li>Analisi dati e produzione di report per il programma fedeltà “Spendi & Riprendi”.</li>
+								<li>Introduzione e familiarizzazione con il gergo tecnico e le best practice del settore.</li>
+							</ul>
+						</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -406,7 +420,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/voci-desktop.webp" alt="Giornale">
+							<img src="images/portfolio/new_york_times_desk.webp" alt="Giornale">
 							<a href="#modal-04" class="overlay">              		                  
 							  <div class="folio-item-table">
 								<div class="folio-item-cell">
@@ -491,19 +505,18 @@
 				   <div id="modal-04" class="popup-modal slider mfp-hide">	
 
 					<div class="media">
-						<img src="images/portfolio/modals/voci.webp" alt="" />
+						<img src="images/portfolio/modals/nyt.webp" alt="new work times"/>
 					</div>      	
 
 				  <div class="description-box">
-					 <h4>Progetto VOCI</h4>
+					 <h4>Progetto Clone New York Times</h4>
 					 <a href="file/progetto-clone_NYT.pdf" download class="download-btn">Scarica il PDF</a>		      
-					 <p>Per questo progetto ho sviluppato Voci, una piattaforma che promuove la parità di genere nei media, con l’obiettivo di dare maggiore visibilità alle donne professioniste del settore. Ancora oggi, le donne nei media affrontano ostacoli significativi, dalla scarsa rappresentanza ai pregiudizi di genere. Voci nasce per creare una rete di supporto che connetta giornaliste, scrittrici e professioniste dell'informazione con opportunità di crescita, formazione e pubblicazione, contribuendo a un panorama mediatico più inclusivo ed equo.
-					   Credo fortemente che la parità di genere non sia solo un obiettivo, ma una necessità per costruire un futuro più giusto. Questo progetto è il mio piccolo contributo per dare voce a chi troppo spesso viene ignorato.</p>
-					 <div class="categories">Typescript</div>			               
+					 <p>In questo progetto ho replicato la home page del New York Times utilizzando la loro API, lavorando su un’interfaccia intuitiva e responsive. Ma la parte che mi rende più orgogliosa è la sezione Women in Tech, uno spazio dedicato alle donne che stanno trasformando il mondo della tecnologia e dello sviluppo software. </p>
+					 <div class="categories">React</div>			               
 				  </div>
 
 				<div class="link-box">
-				   <a href="https://codepen.io/Katiuscia-Balia">Details</a>
+				   <a href="https://nyt-clone-bk.netlify.app/">Details</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
 				</div>		      
 
