--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Cad-Cam Designer</h3>
-	   					<p>Maggio 2017 - Marzo 2014</p>
+	   					<p>Maggio 2017 - Marzo 2024</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -293,7 +293,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Master Full stack developer</h3>
-	   					<p>Giugno 2024 - Present</p>
+	   					<p>Giugno 2024 - Giugno 2025</p>
 	   				</div>
 
 	   				<div class="timeline-content">
