--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Graphic designer</h3>
-	   					<p>gennaio 2024 - Aprile 2024</p>
+	   					<p>novembre 2023 - Aprile 2024</p>
 	   				</div>
 
 	   				<div class="timeline-content">
